Fixed even more cosmetic things

--- a/TransE:RotatE/TransE:RotatE.ipynb
+++ b/TransE:RotatE/TransE:RotatE.ipynb
@@ -132,7 +132,7 @@
     "    tail = positive_relation[2]\n",
     "\n",
     "    # find all tails t for which (head, rel, t) is in all_positive_relations\n",
-    "    positive_tails = all_positive_relations[\n",
+    "    present_tails = all_positive_relations[\n",
     "        torch.bitwise_and(\n",
     "            all_positive_relations[:, 1] == rel,\\\n",
     "            all_positive_relations[:, 0] == head\n",
@@ -140,7 +140,7 @@
     "    ][:, 2]\n",
     "\n",
     "    # find all heads h for which (h, rel, tail) is in all_positive_relations\n",
-    "    positive_heads = all_positive_relations[\n",
+    "    present_heads = all_positive_relations[\n",
     "        torch.bitwise_and(\n",
     "            all_positive_relations[:, 1] == rel,\\\n",
     "            all_positive_relations[:, 2] == tail\n",
@@ -149,15 +149,15 @@
     "\n",
     "    all_entities = torch.arange(all_entities_num)\n",
     "\n",
-    "    mask_tails = torch.zeros(all_entities_num, dtype=torch.bool)\n",
-    "    mask_tails[positive_tails] = True\n",
+    "    tails_mask = torch.zeros(all_entities_num, dtype=torch.bool)\n",
+    "    tails_mask[existing_tails] = True\n",
     "    # find all tails t for which (head, rel, t) is NOT in all_positive_relations\n",
-    "    missing_tails = all_entities[~mask_tails]\n",
+    "    missing_tails = all_entities[~tails_mask]\n",
     "\n",
-    "    mask_heads = torch.zeros(all_entities_num, dtype=torch.bool)\n",
-    "    mask_heads[positive_heads] = True\n",
+    "    heads_mask = torch.zeros(all_entities_num, dtype=torch.bool)\n",
+    "    heads_mask[existing_heads] = True\n",
     "    # find all heads h for which (h, rel, tail) is NOT in all_positive_relations\n",
-    "    missing_heads = all_entities[~mask_heads]\n",
+    "    missing_heads = all_entities[~heads_mask]\n",
     "\n",
     "    # form corrupted relations\n",
     "    # if eval_only we want all of them triples\n",
