Fixed chart label

--- a/TransE:RotatE/TransE:RotatE.ipynb
+++ b/TransE:RotatE/TransE:RotatE.ipynb
@@ -2048,7 +2048,7 @@
     "\n",
     "axs[1].plot(valid_mean_ranks, label='Validation Metrics - Mean Rank')\n",
     "axs[1].set_xlabel(\"Epoch\")\n",
-    "axs[1].set_ylabel(\"Mean Rank\")\n",
+    "axs[1].set_ylabel(\"Mean Rank Metric on the Validation Set\")\n",
     "\n",
     "plt.show()"
    ],
